<resources>
    <string name="app_name">Super Wing</string>
    <string name="dish">Dish</string>
    <string name="_10_minutes_for_delivery">10 minutes for delivery</string>
    <string name="_150">$150</string>
    <string name="join_with_largest_food_community">Join with <b><font color="#000">largest</font></b> food community</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Supper Wing</string>
    <string name="menu_home">Home</string>
    <string name="menu_dish">Dishs</string>
    <string name="menu_delivery">Menu</string>
    <string name="menu_deliver">My Deliver Buddy</string>
    <string name="menu_foods">Foods</string>
    <string name="shops">Shops</string>
    <string name="satellite_map">Satellite</string>
    <string name="normal_map">Normal</string>
    <string name="next">Next</string>
    <string name="quick_go_to">Quick Go To</string>
    <string name="exit">Exit</string>
    <string name="hi_nice_to_meet_you">Hi,Nice To Meet You!</string>
    <string name="we_ve_tried_to_find_a_way_to_add_more_feedback_and_dynamics_into_procces">We\'ve tried to find a way to add more feedback and dynamics into procces</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="connect_with_phone_number">Connect with phone number</string>
    <string name="verification_codes_otp">Verification Codes OTP</string>
    <string name="a_verification_codes_has_been_sent_to">A verification codes has been sent to</string>
    <string name="don_t_receive_the_code">Don\'t receive the code ?</string>
    <string name="resend">Resend</string>
    <string name="category">Category</string>
    <string name="payments">Payments</string>
    <string name="offers">Offers</string>
    <string name="delivery">Delivery</string>
    <string name="special_offer_for">Special Offer For</string>
    <string name="credit_card_holders">Credit card Holders</string>
    <string name="join_with_community">Join With Community</string>
    <string name="review">Review</string>
    <string name="find_your_favorite_food">Find Your Favorite Food</string>
    <string name="find_your_favorite_food_from_our_existing_location_easily">Find your favorite food from our existing location easily</string>
    <string name="search_for_restaurant">Search for Restaurant</string>
    <string name="popular_near_you">Popular Near You</string>
    <string name="view_more">View More</string>
    <string name="explore_categories">Explore Categories</string>
    <string name="show_all">Show all</string>
    <string name="recommended">Recommended</string>
    <string name="hot_delivery_for_home">Hot Delivery For Home</string>
    <string name="our_delivery_man_deliver_the_food_to_your_home_so_fast">Our delivery man deliver the food to your home so fast</string>
    <string name="pick_up">Pick_Up</string>
    <string name="receive_the_great_food">Receive The Great Food</string>
    <string name="you_will_receive_the_great_food_with_in_a_few_minutes">You will receive the great food with in a few minutes</string>
    <string name="in_stock">In Stock</string>
    <string name="cancel">Cancel</string>
    <string name="change_payment_method">Change payment method</string>
    <string name="call_to_support">Call to support</string>
    <string name="view_car_photo">View car photo</string>
    <string name="qty">Qty</string>
    <string name="size">Size</string>
    <string name="tag">Tag</string>
    <string name="hand_tossed">Hand Tossed</string>
    <string name="hand_made">Hand Made</string>
    <string name="thin_crust">Thin Crust</string>
    <string name="dropped_pin">Add Title and Description</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="latest_offers">Latest offers</string>
    <string name="find_discount_offers">Find discount, offers</string>
    <string name="special_meals_and_more">Special meals and more</string>
    <string name="benefit_from_our_offers">Benefit from our offers</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title_activity_map">Map</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="payment">Payment</string>
    <string name="activity">Activity</string>
    <string name="home">Home</string>
    <string name="search_here">Search here ....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_review">How was your experience?</string>
    <string name="filter_add_review">Add review</string>
    <string name="submit">Submit</string>

    <string name="todo">TODO</string>
    <string name="basket">Basket</string>
    <string name="termAndConditions">By adding a card,you have read and agree to our<b><font color="#00BCD4"> terms and conditions</font></b>.</string>
    <string name="home_made">Home Made</string>
    <string name="search_for_shop">"Search For Shops "</string>
</resources>