<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/introBackColor"
    android:fitsSystemWindows="true"
    tools:context=".ui.intro.signin.SignInActivity">

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/card"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:padding="100dp"
        app:srcCompat="@drawable/ic_logowing" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-30dp"
        app:cardCornerRadius="50dp"

        app:cardElevation="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/hi_nice_to_meet_you"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="36dp"
                android:text="@string/we_ve_tried_to_find_a_way_to_add_more_feedback_and_dynamics_into_procces"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/textView"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDes">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:ccp_countryPreference="us,eg"
                    app:ccp_defaultPhoneCode="20" />

                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/background_search_et"
                    android:digits="0123456789"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:padding="8dp"
                    android:singleLine="true" />
            </LinearLayout>

            <View
                android:id="@+id/phoneTextView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_phone"
                android:backgroundTint="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="32dp"
                android:padding="16dp"
                android:text="@string/connect_with_phone_number"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/phoneTextView"
                app:layout_constraintEnd_toEndOf="@+id/phoneTextView"
                app:layout_constraintStart_toStartOf="@+id/phoneTextView"
                app:layout_constraintTop_toTopOf="@+id/phoneTextView" />

            <ProgressBar
                android:id="@+id/progressBarCheckPhone"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>