<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.tahadroid.wing.ui.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_homeMadeFragment"
            app:destination="@id/homeMadeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_foodsFragment"
            app:destination="@id/foodsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_shopsFragment"
            app:destination="@id/shopsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_offersFragment"
            app:destination="@id/offersFragment" />
        <action
            android:id="@+id/action_homeFragment_to_addCardFragment"
            app:destination="@id/addCardFragment" />
    </fragment>

    <fragment
        android:id="@+id/homeMadeFragment"
        android:name="com.tahadroid.wing.ui.fragments.home.homemade.HomeMadeFragment"
        android:label="@string/home_made"
        tools:layout="@layout/fragment_home_made" >
        <action
            android:id="@+id/action_homeMadeFragment_self"
            app:destination="@id/homeMadeFragment"
            app:launchSingleTop="true" />
    </fragment>

    <fragment
        android:id="@+id/orderFragment"
        android:name="com.tahadroid.wing.ui.fragments.home.order.OrderFragment"
        android:label="@string/menu_delivery"
        tools:layout="@layout/fragment_order" >
        <action
            android:id="@+id/action_orderFragment_to_foodsFragment"
            app:destination="@id/foodsFragment" />
        <action
            android:id="@+id/action_orderFragment_to_bottomSheetOrder"
            app:destination="@id/bottomSheetOrder" />
        <argument
            android:name="pid"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="shopName"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="imagePath"
            app:argType="string" />
        <action
            android:id="@+id/action_orderFragment_to_checkoutFragment"
            app:destination="@id/basketFragment" />
    </fragment>
    <fragment
        android:id="@+id/foodsFragment"
        android:name="com.tahadroid.wing.ui.fragments.home.restaurants.RestaurantsFragment"
        android:label="@string/menu_foods"
        tools:layout="@layout/fragment_foods" >
        <action
            android:id="@+id/action_foodsFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
        <action
            android:id="@+id/action_foodsFragment_self"
            app:destination="@id/foodsFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/shopsFragment"
        android:name="com.tahadroid.wing.ui.fragments.home.shops.ShopsFragment"
        android:label="fragment_shops"
        tools:layout="@layout/fragment_shops" >
        <action
            android:id="@+id/action_shopsFragment_to_orderFragment"
            app:destination="@id/orderFragment" />
        <action
            android:id="@+id/action_shopsFragment_self"
            app:destination="@id/shopsFragment"
            app:launchSingleTop="true" />
    </fragment>
    <dialog
        android:id="@+id/bottomSheetOrder"
        android:name="com.tahadroid.wing.ui.fragments.home.order.OrderBottomSheet"
        tools:layout="@layout/bottom_sheet_order" >
        <argument
            android:name="shopName"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="foodName"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="foodPrice"
            app:argType="float" />
        <argument
            android:name="mealId"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="imageUrl"
            app:argType="string" />
        <argument
            android:name="menuOrder"
            app:argType="com.tahadroid.wing.models.Menu" />
    </dialog>
    <fragment
        android:id="@+id/offersFragment"
        android:name="com.tahadroid.wing.ui.fragments.home.offers.OffersFragment"
        android:label="fragment_offers"
        tools:layout="@layout/fragment_offers" >
        <action
            android:id="@+id/action_offersFragment_self"
            app:destination="@id/offersFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.tahadroid.wing.ui.fragments.account.AccountFragment"
        android:label="fragment_account"
        tools:layout="@layout/fragment_account" >
        <action
            android:id="@+id/action_accountFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/notificationFragment"
        android:name="com.tahadroid.wing.ui.fragments.notification.NotificationFragment"
        android:label="fragment_notification"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/activityFragment"
        android:name="com.tahadroid.wing.ui.fragments.activity.ActivityFragment"
        android:label="fragment_activity"
        tools:layout="@layout/fragment_activity" />
    <fragment
        android:id="@+id/basketFragment"
        android:name="com.tahadroid.wing.ui.fragments.basket.BasketFragment"
        android:label="fragment_basket"
        tools:layout="@layout/fragment_basket" >
        <action
            android:id="@+id/action_basketFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true" />
    </fragment>
    <fragment
        android:id="@+id/addCardFragment"
        android:name="com.tahadroid.wing.ui.fragments.home.addcard.AddCardFragment"
        android:label="fragment_add_card"
        tools:layout="@layout/fragment_add_card" />
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.tahadroid.wing.ui.fragments.account.editprofile.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfileFragment_to_accountFragment"
            app:destination="@id/accountFragment"
            app:launchSingleTop="true" />
    </fragment>


</navigation>