<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_bottomsheet"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView_profile"
        app:layout_constraintStart_toStartOf="@+id/circleImageView_profile"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView_profile"
        app:srcCompat="@drawable/cardlogo" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView_profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Davied"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/circleImageView_profile"
        app:layout_constraintTop_toTopOf="@+id/circleImageView_profile" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Gray mathtablish (2006)"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableEnd="@drawable/ic_star"
        android:drawablePadding="16dp"
        android:text="4.95"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="13 75 MD"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Master card-4525"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="$24"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <View
        android:id="@+id/view4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_search_et"
        app:layout_constraintBottom_toBottomOf="@+id/viewComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewComment"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:srcCompat="@drawable/ic_microphone" />

    <View
        android:id="@+id/viewComment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_comment"
        app:layout_constraintBottom_toBottomOf="@+id/viewCall"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/viewCall" />

    <ImageView
        android:id="@+id/imageViewComment"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewComment"
        app:layout_constraintEnd_toEndOf="@+id/viewComment"
        app:layout_constraintStart_toStartOf="@+id/viewComment"
        app:layout_constraintTop_toTopOf="@+id/viewComment"
        app:srcCompat="@drawable/ic_comment" />

    <View
        android:id="@+id/viewCall"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_call"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintEnd_toStartOf="@+id/viewComment"
        app:layout_constraintTop_toTopOf="@+id/textView37" />

    <ImageView
        android:id="@+id/imageViewCall"
        android:layout_width="30dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/viewCall"
        app:layout_constraintEnd_toEndOf="@+id/viewCall"
        app:layout_constraintStart_toStartOf="@+id/viewCall"
        app:layout_constraintTop_toTopOf="@+id/viewCall"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/change_payment_method"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/call_to_support"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/view_car_photo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <View
        android:layout_width="40dp"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="#A2A8A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>